--- a/index.html
+++ b/index.html
@@ -105,38 +105,61 @@
          <h2 class="finish_header"> По окончании обучения Вы сможете!</h2>
 
          <div class="finish_divider"></div>
+
+         <div class="finish_wrapper">
+            <div class="finish_item">
+               <div class="finish_round">
+                  <img src="icons/finish/finish_icon_1.png" alt="icon_1" class="finish_icon">
+               </div>
+               <div class="finish_descr">Создать свой сайт или блог</div>
+            </div>
+            <div class="finish_item">
+               <div class="finish_round">
+                  <img src="icons/finish/finish_icon_2.png" alt="icon_2" class="finish_icon">
+               </div>
+               <div class="finish_descr">Правильно его оптимизировать</div>
+            </div>
+            <div class="finish_item">
+               <div class="finish_round">
+                  <img src="icons/finish/finish_icon_3.png" alt="icon_3" class="finish_icon">
+               </div>
+               <div class="finish_descr">Обеспечить ему медленный, но верный рост в ТОП</div>
+            </div>
+            <div class="finish_item">
+               <div class="finish_round">
+                  <img src="icons/finish/finish_icon_4.png" alt="icon_4" class="finish_icon">
+               </div>
+               <div class="finish_descr">Достигнуть стабильного прироста посетителей</div>
+            </div>
+            <div class="finish_item">
+               <div class="finish_round">
+                  <img src="icons/finish/finish_icon_5.png" alt="icon_5" class="finish_icon">
+               </div>
+               <div class="finish_descr">Получать ощутимую прибыль</div>
+            </div>
+
+         </div>
       </div>
-      <div class="finish_wrapper">
-         <div class="finish_item">
-            <div class="finish_round">
-               <img src="" alt="" class="finish_icon">
-            </div>
-            <div class="finish_descr"></div>
+   </section>
+   <section class="gift">
+      <div class="container">
+         <img src="icons/Rectangle.png" alt="gift" class="gift_img">
+         <div class="gift_header">
+            Для всех участников интенсива предусмотрены бонусы и подарки. Нажимайте <br>
+            на кнопку ниже, принимайте участие в вебинарах и забирайте свой приз по <br>
+            окончании обучения!
          </div>
-         <div class="finish_item">
-            <div class="finish_round">
-               <img src="" alt="" class="finish_icon">
-            </div>
-            <div class="finish_descr"></div>
+         <button class="gift_promo_btn"> Записаться на интенсив! </button>
+
+      </div>
+      </div>
+   </section>
+   <section class="first_webinar">
+      <div class="container">
+         <img src="img/first_webinar/first__webinar.png" alt="first_webinar" class="first_webinar_img">
+         <div class="first_webinar_header">
+            Первый вебинар состоится:
          </div>
-         <div class="finish_item">
-            <div class="finish_round">
-               <img src="" alt="" class="finish_icon">
-            </div>
-            <div class="finish_descr"></div>
-         </div>
-         <div class="finish_item">
-            <div class="finish_round">
-               <img src="" alt="" class="finish_icon">
-            </div>
-            <div class="finish_descr"></div>
-         </div>
-         <div class="finish_item">
-            <div class="finish_round">
-               <img src="" alt="" class="finish_icon">
-            </div>
-         </div>
-         <div class="finish_descr"></div>
       </div>
    </section>
 </body>
