--- a/index.html
+++ b/index.html
@@ -160,8 +160,24 @@
          <div class="first_webinar_header">
             Первый вебинар состоится:
          </div>
+         <div class="first_webinar_datum">
+            10 сентября в 20:00 по Москве
+         </div>
+         <div class="first_webinar_push">
+            Успейте записаться, количество мест ограничено!
+         </div>
       </div>
    </section>
+   <footer>
+      <div class="info">
+         <div class="info_links">
+            <a href="#" class="underlined">Служба поддержки</a>
+            |
+            <a href="#" class="underlined">Политика конфиденциальности</a>
+         </div>
+         Позвоните нам <a href="tel:+88005550121">8-800-555-01-21</a>
+      </div>
+   </footer>
 </body>
 
 </html>
